--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -12,7 +12,35 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+    <section class ="card" id="html-section"> <!--HTML SECTION HERE-->
+      <h2>HTML</h2>
+      <ul>
+        <li>The head element contains information about the webpage.</li>
+        <li>The body element represents the visible content shown to the user.</li>
+      </ul>
+      </section>
+      <section class="card" id="css-section"> <!--CSS SECTION HERE-->
+        <h2>CSS</h2>
+        <ul>
+          <li>CSS NOTES HERE</li>
+          <li>CSS NOTES HERE</li>
+        </ul>
+      </section>
+      <section class="card" id="git-section"> <!--GIT SECTION HERE-->
+        <h2>GIT</h2>
+        <ul>
+          <li>git status: Checks what branch we are in</li>
+          <li>git checkout -b [branch-name]: creates a new branch and switches to it</li>
+          <li>git config --global user.name/user.email "[github-username]"/"[email]": Configures and logs you in</li>
+        </ul>
+      </section>
+      <section class="card" id="javascript-section"> <!--JAVASCRIPT SECTION HERE-->
+        <h2>Javascript</h2>
+        <ul>
+          <li>JAVASCRIPT NOTES HERE</li>
+          <li>JAVASCRIPT NOTES HERE</li>
+        </ul>
+      </section>
     </main>
 
     <footer>
